Tách run command của server và client, cộng thêm 1 vài thay đổi về cách server handle trạng thái bid của seller